# doc/api.yaml
@@ -417,7 +417,7 @@ components:
       in: path
       required: true
       schema: 
-        $ref: '#/components/schemas/User/properties/username'
+        $ref: '#/components/schemas/User/properties/uid'
 
     bid:
       description: banned user id
@@ -425,7 +425,7 @@ components:
       in: path
       required: true
       schema: 
-        $ref: '#/components/schemas/User/properties/username'
+        $ref: '#/components/schemas/User/properties/uid'
 
     cid:
       description: comment id 
